<resources>
    //Authentification Activity
    <string name="app_name">Cafuture</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Correo Electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="registry">Registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre no es valido</string>
    <string name="invalid_password">La contraseña debe de ser de por lo menos 5 caracteres</string>
    <string name="login_failed">"Login failed"</string>

    //Actividad Registro

    <string name="nombre_usuario">Nombre</string>
    <string name="edad_usuario">Edad</string>

    //Home activity
    <string name="title_activity_segundo">SegundoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Smith</string> // Cambio para video
    <string name="nav_header_subtitle">Alumno</string> // Cambio para video
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>
    <string name="volver">Volver</string>

    //main drawer
    <string name="nombre_menu">Menú</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Menú</string>
    <string name="menu_slideshow">Combos</string>
    <string name="menu_dulces">Dulces</string>

    <string name="postres">Postres</string>

    <string name="comida_mexicana">Comida mexicana</string>

    <string name="Postres">Postres</string>
    <string name="PostresAdapter">PostresAdapter</string>

    <string name="carrito">Ir al carrito</string>


    <string name="categoria1">Gorditas</string>
    <string name="categoria2">Tortas</string>
    <string name="categoria3">Flautas</string>
    <string name="categoria4">Hamburguesas</string>
    <string name="categoria5">Quesadillas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_categoria1">categoriaActivity1</string>

    // Recursos carrito
    <string name="Comprar">Comprar</string>
    <string name="Seguir">Seguir comprando</string>
    <string name="Resumen">Resumen carrito</string>
    <string name="Total">Total: $42.00</string>
    <string name="Tiempo">Tiempo de preparación:</string>

</resources>

