<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.francisco.cafuture_v2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.francisco.cafuture_v2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.francisco.cafuture_v2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/menu_dulces"
        android:name="com.francisco.cafuture_v2.Dulces"
        android:label="Dulces"
        tools:layout="@layout/fragment_dulces" />
    <fragment
        android:id="@+id/categoria3"
        android:name="com.francisco.cafuture_v2.categoria3"
        android:label="@string/categoria3"
        tools:layout="@layout/fragment_categoria3" />
    <fragment
        android:id="@+id/categoria4"
        android:name="com.francisco.cafuture_v2.categoria4"
        android:label="@string/categoria4"
        tools:layout="@layout/fragment_categoria4" />
    <fragment
        android:id="@+id/categoria5"
        android:name="com.francisco.cafuture_v2.categoria5"
        android:label="@string/categoria5"
        tools:layout="@layout/fragment_categoria5" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.francisco.cafuture_v2.ui.login.LoginActivity"
        android:label="activity_auth"
        tools:layout="@layout/activity_auth" />
    <activity
        android:id="@+id/registryActivity"
        android:name="com.francisco.cafuture_v2.RegistryActivity"
        android:label="activity_registry"
        tools:layout="@layout/activity_registry" />
    <activity
        android:id="@+id/menu_postres"
        android:name="com.francisco.cafuture_v2.ui.menu_postres"
        android:label="activity_menu_postres"
        tools:layout="@layout/activity_menu_postres" />
    <activity
        android:id="@+id/menu_comida_mexicana"
        android:name="com.francisco.cafuture_v2.ui.menu_comida_mexicana"
        android:label="activity_menu_comida_mexicana"
        tools:layout="@layout/activity_menu_comida_mexicana" />
    <activity
        android:id="@+id/menu_comida_italiana"
        android:name="com.francisco.cafuture_v2.ui.menu_comida_italiana"
        android:label="activity_menu_comida_italiana"
        tools:layout="@layout/activity_menu_comida_italiana" />
    <activity
        android:id="@+id/carrito"
        android:name="com.francisco.cafuture_v2.ui.carrito"
        android:label="activity_carrito"
        tools:layout="@layout/activity_carrito" />
</navigation>